--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ tokio = { version = "1.43.0", features = ["full"] }
 futures = "0.3.31"
 env_logger = "0.11.6"
 glob = "0.3.2"
+
+[dev-dependencies]
+tempfile = "3.10.1"
