--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ license = "MIT"
 description = "A tool to extract metadata from .safetensors files in a target directory and its subdirectories."
 documentation = "https://docs.rs/extract-metadata"
 repository = "https://github.com/rakki194/extract-metadata"
+homepage = "https://github.com/rakki194/extract-metadata"
+keywords = ["metadata", "safetensors", "machine-learning", "cli", "batch"]
+categories = ["command-line-utilities", "development-tools", "science::ml"]
 
 [dependencies]
 xio = { path = "../xio", version = "0.1.3" }
