--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ documentation = "https://docs.rs/extract-metadata"
 repository = "https://github.com/rakki194/extract-metadata"
 homepage = "https://github.com/rakki194/extract-metadata"
 keywords = ["metadata", "safetensors", "machine-learning", "cli", "batch"]
-categories = ["command-line-utilities", "development-tools", "science::ml"]
+categories = ["command-line-utilities", "development-tools"]
 
 [dependencies]
 xio = { version = "0.1.7" }
